src/parse/snapshots/script_lang__parse__test__assignment__simple.snap
---
source: src/parse/test.rs
assertion_line: 89
expression: ast

---
Assignment(
    Assignment {
        span: Span {
            start: 0,
            end: 0,
        },
        lhs: Ident(
            Ident {
                sym: "hugo",
                span: Span {
                    start: 0,
                    end: 0,
                },
            },
        ),
        rhs: Literal(
            Number(
                10.0,
                Span {
                    start: 0,
                    end: 0,
                },
            ),
        ),
    },
)
